# src/services/user/router.ts
@@ -1,6 +1,7 @@
 import express from "express";
 const router = express.Router();
+import UserService from "./app.js";
 
-router.get('/profile'  , )
+router.get("/profile", UserService.getProfile);
 
 export default router;
